--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
     "autoload": {
         "psr-4": {
             "AwStudio\\Bitmask\\": "src"
-        }
+        },
+        "files": [
+            "src/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
@@ -21,7 +24,8 @@
         }
     },
     "require": {
-        "php": "^8.0"
+        "php": "^8.0",
+        "illuminate/support": "^8"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4",
