--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "AwStudio\\Bitflags\\Tests\\": "tests/"
         }
     },
     "require": {
@@ -28,7 +28,8 @@
         "illuminate/support": "^8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.4",
+        "phpunit/phpunit": "^9.5",
+        "orchestra/testbench": "^6.19",
         "mockery/mockery": "^1.4"
     },
     "extra": {
